nemu/include/cpu/instr/.err
jmp.h:4:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(jmp_near);
                ^
jmp.h:5:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(jmp_near_indirect);
                ^
jmp.h:6:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(jmp_short);
                ^
jmp.h:7:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(jmp+ptr);
                ^
